--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         <activity android:name=".vistas.trabajador.Trabajador_V"></activity>
         <activity android:name=".vistas.cliente.Cliente_V" />
         <activity
-            android:name=".Administrador_V"
+            android:name=".vistas.administrador.Administrador_V"
             android:label="@string/title_activity_administrador__v"
             android:theme="@style/Theme.Peluqueria.NoActionBar" />
         <activity android:name=".MainActivity">
